src/antlr/MirrorQLParser.ts
// Generated from antlr/MirrorQL.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import MirrorQLListener from "./MirrorQLListener.js";
import MirrorQLVisitor from "./MirrorQLVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class MirrorQLParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly AND = 20;
	public static readonly OR = 21;
	public static readonly NOT = 22;
	public static readonly ADD = 23;
	public static readonly MINUS = 24;
	public static readonly MUL = 25;
	public static readonly CLASS = 26;
	public static readonly DOT = 27;
	public static readonly EXISTS = 28;
	public static readonly FORALL = 29;
	public static readonly INSTANCEOF = 30;
	public static readonly FUNCTION = 31;
	public static readonly FOR = 32;
	public static readonly IF = 33;
	public static readonly ELSE = 34;
	public static readonly IMPL = 35;
	public static readonly SELF = 36;
	public static readonly SUPER = 37;
	public static readonly PACKAGE = 38;
	public static readonly TRAIT = 39;
	public static readonly LET = 40;
	public static readonly MOD = 41;
	public static readonly EXTENDS = 42;
	public static readonly SEMICOLON = 43;
	public static readonly IMPL_OP = 44;
	public static readonly YES = 45;
	public static readonly NO = 46;
	public static readonly OBRACE = 47;
	public static readonly CBRACE = 48;
	public static readonly COUNT = 49;
	public static readonly MIN = 50;
	public static readonly MAX = 51;
	public static readonly ENUM = 52;
	public static readonly FROM = 53;
	public static readonly WHERE = 54;
	public static readonly SELECT = 55;
	public static readonly RECORD = 56;
	public static readonly IN = 57;
	public static readonly ID = 58;
	public static readonly INT = 59;
	public static readonly FLOAT = 60;
	public static readonly STRING = 61;
	public static readonly WS = 62;
	public static readonly COMMENT = 63;
	public static readonly LINE_COMMENT = 64;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_variable_declare = 0;
	public static readonly RULE_variable_declare_list = 1;
	public static readonly RULE_identifier = 2;
	public static readonly RULE_module_identifier = 3;
	public static readonly RULE_module_expr = 4;
	public static readonly RULE_type_name = 5;
	public static readonly RULE_type_arg_list = 6;
	public static readonly RULE_type_para = 7;
	public static readonly RULE_type_para_list = 8;
	public static readonly RULE_type_expr = 9;
	public static readonly RULE_parameter_type_list = 10;
	public static readonly RULE_use_stmt = 11;
	public static readonly RULE_parameter_declare = 12;
	public static readonly RULE_parameter_declare_list = 13;
	public static readonly RULE_func_body = 14;
	public static readonly RULE_meta_attr = 15;
	public static readonly RULE_meta_attrs = 16;
	public static readonly RULE_func_declartion = 17;
	public static readonly RULE_func_sig_decl = 18;
	public static readonly RULE_field_declaration = 19;
	public static readonly RULE_base_type_declaration = 20;
	public static readonly RULE_class_declaration = 21;
	public static readonly RULE_trait_declaration = 22;
	public static readonly RULE_impl_trait_declaration = 23;
	public static readonly RULE_impl_declaration = 24;
	public static readonly RULE_impl_copy = 25;
	public static readonly RULE_literal = 26;
	public static readonly RULE_quantifier_expr = 27;
	public static readonly RULE_aggregate_expr = 28;
	public static readonly RULE_block = 29;
	public static readonly RULE_expr = 30;
	public static readonly RULE_module_level_access = 31;
	public static readonly RULE_primary = 32;
	public static readonly RULE_expr_list = 33;
	public static readonly RULE_args_list = 34;
	public static readonly RULE_select_expr = 35;
	public static readonly RULE_expr_root = 36;
	public static readonly RULE_outside_func_meta_info = 37;
	public static readonly RULE_input_func_decl = 38;
	public static readonly RULE_top_level_decl = 39;
	public static readonly RULE_module_content = 40;
	public static readonly RULE_local_module = 41;
	public static readonly RULE_mql_file = 42;
	public static readonly literalNames: (string | null)[] = [ null, "','", 
                                                            "'['", "']'", 
                                                            "'::'", "'->'", 
                                                            "'('", "')'", 
                                                            "'()'", "'use'", 
                                                            "'as'", "':'", 
                                                            "'='", "'|'", 
                                                            "'<='", "'>='", 
                                                            "'>'", "'<'", 
                                                            "'=='", "'!='", 
                                                            "'and'", "'or'", 
                                                            "'not'", "'+'", 
                                                            "'-'", "'*'", 
                                                            "'class'", "'.'", 
                                                            "'exists'", 
                                                            "'forall'", 
                                                            "'instanceof'", 
                                                            "'fn'", "'for'", 
                                                            "'if'", "'else'", 
                                                            "'impl'", "'self'", 
                                                            "'super'", "'package'", 
                                                            "'trait'", "'let'", 
                                                            "'mod'", "'extends'", 
                                                            "';'", "'<:'", 
                                                            "'yes'", "'no'", 
                                                            "'{'", "'}'", 
                                                            "'count'", "'min'", 
                                                            "'max'", "'enum'", 
                                                            "'from'", "'where'", 
                                                            "'select'", 
                                                            "'record'", 
                                                            "'in'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             "AND", "OR", 
                                                             "NOT", "ADD", 
                                                             "MINUS", "MUL", 
                                                             "CLASS", "DOT", 
                                                             "EXISTS", "FORALL", 
                                                             "INSTANCEOF", 
                                                             "FUNCTION", 
                                                             "FOR", "IF", 
                                                             "ELSE", "IMPL", 
                                                             "SELF", "SUPER", 
                                                             "PACKAGE", 
                                                             "TRAIT", "LET", 
                                                             "MOD", "EXTENDS", 
                                                             "SEMICOLON", 
                                                             "IMPL_OP", 
                                                             "YES", "NO", 
                                                             "OBRACE", "CBRACE", 
                                                             "COUNT", "MIN", 
                                                             "MAX", "ENUM", 
                                                             "FROM", "WHERE", 
                                                             "SELECT", "RECORD", 
                                                             "IN", "ID", 
                                                             "INT", "FLOAT", 
                                                             "STRING", "WS", 
                                                             "COMMENT", 
                                                             "LINE_COMMENT" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"variable_declare", "variable_declare_list", "identifier", "module_identifier", 
		"module_expr", "type_name", "type_arg_list", "type_para", "type_para_list", 
		"type_expr", "parameter_type_list", "use_stmt", "parameter_declare", "parameter_declare_list", 
		"func_body", "meta_attr", "meta_attrs", "func_declartion", "func_sig_decl", 
		"field_declaration", "base_type_declaration", "class_declaration", "trait_declaration", 
		"impl_trait_declaration", "impl_declaration", "impl_copy", "literal", 
		"quantifier_expr", "aggregate_expr", "block", "expr", "module_level_access", 
		"primary", "expr_list", "args_list", "select_expr", "expr_root", "outside_func_meta_info", 
		"input_func_decl", "top_level_decl", "module_content", "local_module", 
		"mql_file",
	];
	public get grammarFileName(): string { return "MirrorQL.g4"; }
	public get literalNames(): (string | null)[] { return MirrorQLParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return MirrorQLParser.symbolicNames; }
	public get ruleNames(): string[] { return MirrorQLParser.ruleNames; }
	public get serializedATN(): number[] { return MirrorQLParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, MirrorQLParser._ATN, MirrorQLParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public variable_declare(): Variable_declareContext {
		let localctx: Variable_declareContext = new Variable_declareContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, MirrorQLParser.RULE_variable_declare);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 86;
			this.type_expr();
			this.state = 87;
			this.match(MirrorQLParser.ID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public variable_declare_list(): Variable_declare_listContext {
		let localctx: Variable_declare_listContext = new Variable_declare_listContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, MirrorQLParser.RULE_variable_declare_list);
		let _la: number;
		try {
			this.state = 97;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 89;
				this.variable_declare();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 90;
				this.variable_declare();
				this.state = 93;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 91;
					this.match(MirrorQLParser.T__0);
					this.state = 92;
					this.variable_declare();
					}
					}
					this.state = 95;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la===1);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public identifier(): IdentifierContext {
		let localctx: IdentifierContext = new IdentifierContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, MirrorQLParser.RULE_identifier);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 99;
			this.match(MirrorQLParser.ID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public module_identifier(): Module_identifierContext {
		let localctx: Module_identifierContext = new Module_identifierContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, MirrorQLParser.RULE_module_identifier);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 101;
			this.match(MirrorQLParser.ID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public module_expr(): Module_exprContext {
		let localctx: Module_exprContext = new Module_exprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, MirrorQLParser.RULE_module_expr);
		try {
			this.state = 107;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				localctx = new ModuleNameContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 103;
				(localctx as ModuleNameContext)._name = this.module_identifier();
				}
				break;
			case 2:
				localctx = new ModuleTypeApplyContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 104;
				(localctx as ModuleTypeApplyContext)._name = this.module_identifier();
				{
				this.state = 105;
				(localctx as ModuleTypeApplyContext)._type_args = this.type_arg_list();
				}
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public type_name(): Type_nameContext {
		let localctx: Type_nameContext = new Type_nameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, MirrorQLParser.RULE_type_name);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 109;
			this.identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public type_arg_list(): Type_arg_listContext {
		let localctx: Type_arg_listContext = new Type_arg_listContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, MirrorQLParser.RULE_type_arg_list);
		let _la: number;
		try {
			this.state = 127;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 111;
				this.match(MirrorQLParser.T__1);
				this.state = 112;
				this.match(MirrorQLParser.T__2);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 113;
				this.match(MirrorQLParser.T__1);
				this.state = 114;
				this.type_expr();
				this.state = 115;
				this.match(MirrorQLParser.T__2);
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 117;
				this.match(MirrorQLParser.T__1);
				this.state = 118;
				this.type_expr();
				this.state = 121;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 119;
					this.match(MirrorQLParser.T__0);
					this.state = 120;
					this.type_expr();
					}
					}
					this.state = 123;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la===1);
				this.state = 125;
				this.match(MirrorQLParser.T__2);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public type_para(): Type_paraContext {
		let localctx: Type_paraContext = new Type_paraContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, MirrorQLParser.RULE_type_para);
		let _la: number;
		try {
			this.state = 140;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 129;
				this.type_name();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 130;
				this.type_name();
				this.state = 131;
				this.match(MirrorQLParser.IMPL_OP);
				{
				this.state = 132;
				this.type_expr();
				this.state = 137;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===23) {
					{
					{
					this.state = 133;
					this.match(MirrorQLParser.ADD);
					this.state = 134;
					this.type_expr();
					}
					}
					this.state = 139;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public type_para_list(): Type_para_listContext {
		let localctx: Type_para_listContext = new Type_para_listContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, MirrorQLParser.RULE_type_para_list);
		let _la: number;
		try {
			this.state = 155;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 142;
				this.match(MirrorQLParser.T__1);
				this.state = 143;
				this.match(MirrorQLParser.T__2);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 144;
				this.match(MirrorQLParser.T__1);
				this.state = 145;
				this.type_para();
				this.state = 150;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===1) {
					{
					{
					this.state = 146;
					this.match(MirrorQLParser.T__0);
					this.state = 147;
					this.type_para();
					}
					}
					this.state = 152;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 153;
				this.match(MirrorQLParser.T__2);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public type_expr(): Type_exprContext {
		let localctx: Type_exprContext = new Type_exprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, MirrorQLParser.RULE_type_expr);
		try {
			let _alt: number;
			this.state = 183;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 12, this._ctx) ) {
			case 1:
				localctx = new TypeNameContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 162;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 9, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 157;
						this.module_expr();
						this.state = 158;
						this.match(MirrorQLParser.T__3);
						}
						}
					}
					this.state = 164;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 9, this._ctx);
				}
				this.state = 165;
				(localctx as TypeNameContext)._name = this.identifier();
				}
				break;
			case 2:
				localctx = new TypeApplyContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 171;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 10, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 166;
						this.module_expr();
						this.state = 167;
						this.match(MirrorQLParser.T__3);
						}
						}
					}
					this.state = 173;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 10, this._ctx);
				}
				this.state = 174;
				(localctx as TypeApplyContext)._name = this.identifier();
				this.state = 176;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 11, this._ctx) ) {
				case 1:
					{
					this.state = 175;
					(localctx as TypeApplyContext)._type_args = this.type_arg_list();
					}
					break;
				}
				}
				break;
			case 3:
				localctx = new TypeFunctionContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 178;
				this.match(MirrorQLParser.FUNCTION);
				{
				this.state = 179;
				this.parameter_type_list();
				}
				this.state = 180;
				this.match(MirrorQLParser.T__4);
				{
				this.state = 181;
				(localctx as TypeFunctionContext)._ret_type = this.type_expr();
				}
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public parameter_type_list(): Parameter_type_listContext {
		let localctx: Parameter_type_listContext = new Parameter_type_listContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, MirrorQLParser.RULE_parameter_type_list);
		let _la: number;
		try {
			this.state = 199;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 14, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 185;
				this.match(MirrorQLParser.T__5);
				this.state = 186;
				this.match(MirrorQLParser.T__6);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 187;
				this.match(MirrorQLParser.T__7);
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 188;
				this.match(MirrorQLParser.T__5);
				this.state = 189;
				this.type_expr();
				this.state = 194;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===1) {
					{
					{
					this.state = 190;
					this.match(MirrorQLParser.T__0);
					this.state = 191;
					this.type_expr();
					}
					}
					this.state = 196;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 197;
				this.match(MirrorQLParser.T__6);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public use_stmt(): Use_stmtContext {
		let localctx: Use_stmtContext = new Use_stmtContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, MirrorQLParser.RULE_use_stmt);
		let _la: number;
		try {
			let _alt: number;
			this.state = 269;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 29, this._ctx) ) {
			case 1:
				localctx = new ModuleAliasContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 201;
				this.match(MirrorQLParser.T__8);
				this.state = 203;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 36)) & ~0x1F) === 0 && ((1 << (_la - 36)) & 7) !== 0)) {
					{
					this.state = 202;
					(localctx as ModuleAliasContext)._prefix = this._input.LT(1);
					_la = this._input.LA(1);
					if(!(((((_la - 36)) & ~0x1F) === 0 && ((1 << (_la - 36)) & 7) !== 0))) {
					    (localctx as ModuleAliasContext)._prefix = this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					}
				}

				this.state = 206;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===4) {
					{
					this.state = 205;
					this.match(MirrorQLParser.T__3);
					}
				}

				this.state = 208;
				this.module_expr();
				this.state = 213;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===4) {
					{
					{
					this.state = 209;
					this.match(MirrorQLParser.T__3);
					this.state = 210;
					this.module_expr();
					}
					}
					this.state = 215;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 218;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===10) {
					{
					this.state = 216;
					this.match(MirrorQLParser.T__9);
					this.state = 217;
					(localctx as ModuleAliasContext)._alias = this.identifier();
					}
				}
